src/ceal/tests/neg3/193.gold
Error: (line 1:10 '=') Macro directive unexpected token
