src/ceal/tests/neg3/193.sct
.pragme N=77
1 2 3
4 5 6
# hangs